--- a/index.html
+++ b/index.html
@@ -85,28 +85,28 @@
                         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i><h2>Interests</h2></h2>
                         <div class="w3-container">
                             <h5 class="w3-opacity"><b class="w3-text-blue">School</b></h5>
-                            <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+                            <p>I went to Andover public schools my whole life. school has always been my top priorities and I always wanted to do good in school. I always wanted to get good grades because it willopen up opportunities that will help me  later on in life when looking for a job.</p>
                             <hr>
                         </div>
                         <div class="w3-container">
                             <h5 class="w3-opacity"><b class="w3-text-blue">Sports</b></h5>
-                            <p>I play Lacrosse and hockey but I am better a hockey and I enjoy it more. I have been playing hockey since I was six and started lacrosse at the age of 9  </p>
+                            <p>I play Lacrosse and hockey but I am better a hockey and I enjoy it more. I have been playing hockey since I was six and started lacrosse at the age of 9. I started to play hockey because my older cousin played and I thought he was amazing so that caused me to start and I play.</p>
                             <hr>
                         </div>
                         <div class="w3-container">
                             <h5 class="w3-opacity"><b class="w3-text-blue">Hobbies</b></h5>
 
-                            <p> </p><br>
+                            <p>I like to snowbroad, fish, bike and more. I am always doing something in my freetime with my friends or family. These are things I enjoy but I don't take serious. I do this stuff with my family and friends. I also enjoy hang out with friends and going places with my friends.  </p><br>
                         </div>
                         <div class="w3-container">
                             <h5 class="w3-opacity"><b class="w3-text-blue">Work</b></h5>
 
-                            <p> </p><br>
+                            <p>I worked for my dad company the Carpenters Edge. were I get to learn the basic and I learn hard work here because most of the work I do is keeping the worksite clean and carring materials. I learning this skills now will help me later on in life.</p><br>
                         </div>
                         <div class="w3-container">
-                            <h5 class="w3-opacity"><b class="w3-text-blue">Languages</b></h5>
+                            <h5 class="w3-opacity"><b class="w3-text-blue">Family</b></h5>
 
-                            <p> </p><br>
+                            <p>I live with my three little brother my dog and my mom and dad. We are always going on vacation together and going place. I love spending time with my family. </p><br>
                         </div>
                     </div>
 
